tests/integration/errors/variable_shadowing.rsg
// TEST: compile_error
// EXPECT-ERROR: variable 'x' shadows an existing binding
module test_err

fn main() {
    x := 10
    if true {
        x := 20
    }
}
